<resources>
    <string name="app_name">HelpMeet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="estate_id">Estate Id</string>
    <string name="estate_name">Estate Name</string>
    <string name="house_address">House Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms">By creating an account you agree to our Term of Service</string>
    <string name="estate_address">Estate Address</string>
    <string name="home">HOME</string>
</resources>