<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Create Account"
            android:textAlignment="viewStart"
            android:textColor="@color/primaryColor"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="Required information to account creation"
            android:textColor="@color/primaryColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableEnd="@drawable/ic_email"
            android:hint="@string/email"
            android:textSize="@dimen/textSize"
            app:boxCornerRadiusBottomEnd="@dimen/textInputCornerRadius"
            app:boxCornerRadiusBottomStart="@dimen/textInputCornerRadius"
            app:boxCornerRadiusTopEnd="@dimen/textInputCornerRadius"

            app:helperTextEnabled="true"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:boxCornerRadiusTopStart="@dimen/textInputCornerRadius"
            app:boxStrokeColor="@color/primaryColor"
            app:endIconDrawable="@drawable/ic_home_address"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/password"
            android:textSize="@dimen/textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEstateCountry"

            app:helperTextEnabled="true"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:boxCornerRadiusBottomEnd="@dimen/textInputCornerRadius"
            app:boxCornerRadiusBottomStart="@dimen/textInputCornerRadius"
            app:boxCornerRadiusTopEnd="@dimen/textInputCornerRadius"
            app:boxCornerRadiusTopStart="@dimen/textInputCornerRadius"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="@color/primaryColor"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textAllCaps="false" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etConfirmPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableEnd="@drawable/ic_baseline_password_24"
            android:hint="@string/confirm_password"
            android:textSize="@dimen/textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"

            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:boxCornerRadiusBottomEnd="@dimen/textInputCornerRadius"
            app:boxCornerRadiusBottomStart="@dimen/textInputCornerRadius"
            app:boxCornerRadiusTopEnd="@dimen/textInputCornerRadius"
            app:boxCornerRadiusTopStart="@dimen/textInputCornerRadius"
            app:boxStrokeColor="@color/primaryColor"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEstateAddress"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableEnd="@drawable/ic_home_address"
            android:hint="@string/estate_address"
            android:textSize="@dimen/textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEstateName"

            app:helperTextEnabled="true"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:boxCornerRadiusBottomEnd="@dimen/textInputCornerRadius"
            app:boxCornerRadiusBottomStart="@dimen/textInputCornerRadius"
            app:boxCornerRadiusTopEnd="@dimen/textInputCornerRadius"
            app:boxCornerRadiusTopStart="@dimen/textInputCornerRadius"
            app:boxStrokeColor="@color/primaryColor"
            app:endIconDrawable="@drawable/ic_home_address"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEstateCountry"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableEnd="@drawable/ic_home_address"
            android:hint="Estate Country Code"
            android:inputType="textCapCharacters"
            android:textAllCaps="true"
            android:textSize="@dimen/textSize"
            app:boxCornerRadiusBottomEnd="@dimen/textInputCornerRadius"

            app:boxCornerRadiusBottomStart="@dimen/textInputCornerRadius"
            app:boxCornerRadiusTopEnd="@dimen/textInputCornerRadius"
            app:boxCornerRadiusTopStart="@dimen/textInputCornerRadius"
            app:boxStrokeColor="@color/primaryColor"
            app:counterEnabled="true"
            app:counterMaxLength="2"
            app:endIconDrawable="@drawable/ic_home_address"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEstateAddress">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapSentences|textCapWords"
                android:textAllCaps="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEstateName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableEnd="@drawable/ic_estate"
            android:hint="@string/estate_name"
            android:textSize="@dimen/textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"

            app:helperTextEnabled="true"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:boxCornerRadiusBottomEnd="@dimen/textInputCornerRadius"
            app:boxCornerRadiusBottomStart="@dimen/textInputCornerRadius"
            app:boxCornerRadiusTopEnd="@dimen/textInputCornerRadius"
            app:boxCornerRadiusTopStart="@dimen/textInputCornerRadius"
            app:boxStrokeColor="@color/primaryColor"
            app:endIconDrawable="@drawable/ic_home_address"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnEstateContinue"
            android:layout_width="0dp"
            android:layout_height="66dp"
            android:layout_marginTop="24dp"
            android:text="Continue"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.531"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />


        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/terms"
            android:textColor="@color/primaryColor"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnEstateContinue" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Already have an account?"
            android:textColor="@color/primaryColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/tvLoginText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="Login"
            android:textColor="#C61812"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintVertical_bias="0.693" />






    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>